2007-11-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: many improvements and bug fixes
	* src/plugins/all_relations.py: bug fixes
	* src/plugins/RelCalc.py: use new API
	* src/plugins/rel_nl.py: finished, removed comment
	* src/plugins/rel_it.py: finished
	* src/plugins/rel_pl.py: move old code here away from Relationship
	* src/plugins/rel_pt.py: import gen.lib

2007-11-18  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0001361: Web report: Directory name 
	conflicts

2007-11-17 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_RepositoryModel.py: Properly display the city

2007-11-16  Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: issue #1381, no need to print
	"Confidence" on every reference line if it is "Normal"

2007-11-16  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/rel_pt.py: import gen.lib
        * src/DataViews/_PersonView.py: typo on gettext context
	* src/PageView.py: typo on gettext context

2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	Trying to fix unicode filename handling on Windows. Patch ported from 2.2.
 	* src/Utils.py: add get_unicode_path()
	* src/ArgHandler.py: use Utils.get_unicode_path()
	* src/AddMedia.py: use Utils.get_unicode_path()
	* src/DbLoader.py: use Utils.get_unicode_path()
	* src/Editors/_EditMedia.py: use Utils.get_unicode_path()

2007-11-16  Jerome Rapinat <romjerome@yahoo.fr>
	* src/glade/gramps.glade: correct mnemonic_widget
	* src/glade/edit_person.glade: correct mnemonic_widget
	ticket #1367

2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Config/_GrampsConfigKeys.py: Add keys for the PedigreeView
	* src/DataViews/_PedigreeView.py: Remember tree settings in config
	* src/plugins/TestcaseGenerator.py: Remove date tests
	* src/plugins/DateParserDisplayTest.py: New plugin split out from
	TestcaseGenerator

2007-11-13  Brian Matherly <brian@gramps-project.org>